# jupyter-claude-assistant

./: LICENSE  README.md  jupyter-claude-assistant.json  pyproject.toml  setup.py
cli/: jca.py
frontend/src/: panel.html
jupyter_claude_assistant/: __init__.py  extension.py  widget.py
jupyter_claude_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jupyter_claude_assistant/handlers/: assign_handler.py  base_handler.py  chat_handler.py  complete_handler.py  conda_handler.py  config_handler.py  explain_handler.py  fix_handler.py  memory_handler.py  search_handler.py
jupyter_claude_assistant/services/: __init__.py  claude_service.py  conda_service.py  memory_service.py  search_service.py
tests/: test_claude_service.py  test_conda_service.py  test_memory_service.py
