[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-claude-assistant"
version = "1.0.0"
description = "AI-powered coding assistant for JupyterLab using Claude"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Jonas Brown", email = "brownjonasa@gmail.com" }]
keywords = ["jupyter", "jupyterlab", "claude", "anthropic", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.20.0",
    "jupyter-server>=2.0.0",
    "jupyterlab>=4.0.0",
    "tornado>=6.0",
    "click>=8.0",
    "rich>=12.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/jbrown54-oss/jupyter-claude-assistant"
Repository = "https://github.com/jbrown54-oss/jupyter-claude-assistant"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "mypy",
]
widgets = ["ipywidgets>=8.0"]

[project.scripts]
jca = "cli.jca:main"
jupyter-claude = "cli.jca:main"

[project.entry-points."jupyter_serverproxy_servers"]

[tool.setuptools.packages.find]
include = ["jupyter_claude_assistant*", "cli*"]

[tool.setuptools.package-data]
"jupyter_claude_assistant" = ["*.json"]
"frontend" = ["src/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
